<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dip"
    android:background="#004444">
    <TextView 
        android:id="@+id/android:textview_message_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/android:message_date_textview"
        android:textColor="#c0c0c0"
        android:textSize="15sp"
        android:text="@string/message_name"/>
    <TextView 
        android:id="@+id/android:message_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/android:message_time_textview"
        android:layout_marginRight="5dip"
        android:text="@string/message_date"
        android:textColor="#c0c0c0"/>
    <TextView 
        android:id="@+id/android:message_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/message_time"
        android:textColor="#c0c0c0"/>
    <TextView
        android:id="@+id/android:message_text_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/android:textview_message_name"
        android:text="@string/message_text"
        android:textSize="20sp"
        android:textColor="#ffffff"/>
</RelativeLayout>