<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/relativeLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout 
	    android:id="@+id/android:group_name_layout"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true">
	    <TextView
	        android:id="@+id/android:group_name_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/group_name_text_textview"/>
	    <EditText
	        android:id="@+id/android:group_name_edittext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:maxLines="1"
	        android:hint="@string/group_name_hinttext"/>
	</LinearLayout>
	<ListView 
	    android:id="@+id/android:list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/android:group_name_layout"
	    android:layout_above="@+id/android:confirm_button_create_group"/>
	<Button 
	    android:id="@+id/android:confirm_button_create_group"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:onClick="onClick"
	    android:clickable="true"
	    android:text="@string/confirm_button_text"/>
</RelativeLayout>
