<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:id="@+id/list_groups"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/android:search_group">
    	<LinearLayout
    	    android:id="@+id/android:new_group_layout"
        	android:orientation="horizontal"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:onClick="onClick"
        	android:clickable="true"
        	android:background="#004444">
        	<ImageView 
	            android:layout_width="wrap_content"
    	        android:layout_height="match_parent"
        	    android:src="@drawable/ic_add"
            	android:contentDescription="@string/desc_add_icon"/>
        	<TextView 
	            android:id="@+id/android:new_group"
    	        android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
            	android:textAppearance="?android:attr/textAppearanceLarge"
            	android:text="@string/new_group_text"/>
    	</LinearLayout>
    	<ListView android:id="@+id/android:list"
    		android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>
  	</LinearLayout>
  	<LinearLayout
  	    android:id="@+id/android:search_group"
  	    android:orientation="horizontal"
  	    android:layout_width="match_parent"
  	    android:layout_height="wrap_content"
  	    android:layout_alignParentBottom="true">
        <EditText 
            android:id="@+id/android:search_group_edittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:maxLines="1"
            android:layout_weight="1"
            android:hint="@string/search_group_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >
       		<Button 
            	android:id="@+id/android:search_group_button"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:onClick="onClick"
            	android:clickable="true"
            	android:text="@string/search_button"/>
        </LinearLayout>
  	</LinearLayout>
</RelativeLayout>